avanzado falta mejorar

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
+                    <a href="#contacto" class="btn">Contáctame</a>
                     <div class ="hero-image">
                         <img src="profile.png" alt="Profile Image">
-
                     </div>
                 </div>
             </section>
@@ -45,13 +45,22 @@
                     <div class="timeline-item">
                         <div class="timeline-content">
                             <span class="date">2024-Actualidad</span>
-                            <h3>Desarolladora Frontend</h3>
+                            <h3>Desarolladora IA</h3>
                             <h4>Proyecto Ort Belgrano</h4>
-                            <p>Desarollo de página web atractivas utilizanndo lenguajes de Html, Css y Javascript.</p>
+                            <p>Desarollo de Ia generativa utilizanndo lenguajes de PYTHON y usando librerias como Pytorch y Tensorflow.</p>
                             <ul class="skills">
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>JavaScript</li>
+                                <li>PYTHON</li>
+                                <li>Pytorch</li>
+                                <li>Tensorflow</li>
+                            </ul>
+                            <h3>Desarolladora Backend</h3>
+                            <h4>Proyecto Ort Belgrano</h4>
+                            <p>Desarollo de páginas web utilizando lenguajes de JavaScript, HTML y Css.</p>
+                            <ul class="skills">
+                                <li>Rust</li>
+                                <li>Tailwynd CSS</li>
+                                <li>React</li>
+                                <li>C++</li>
                             </ul>
                         </div>
                     </div>
@@ -59,15 +68,58 @@
             </section>
 
             <section id="proyectos" class="projects">
-                <h2>Proyectos Personales</h2>
+                <h2 class="section-title">Proyectos Personales</h2>
                 <div class="project-container">
                     <div class="proejct-card">
                         <div class="project-img">
-                            <img src="" alt="proyecto 1">
+                            <img src="molgen.png" alt="proyecto 1">
+                        </div>
+                        <div class="project-info">
+                            <h3>Pagina web con Inteligencia Artificial</h3>
+                            <p>Mediante una Ia generativa desarrolla fármacos para la diabetes tipo 2</p>
+                            <div class="project-tech">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>PYTHON</span>
+                                <span>JavaScript</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="#" target="_blank"><i clas="fas fa-link"></i>Demo</a>
+                                <a href="#" target="_blank"><i clas="fab fa-github"></i>Código</a>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="proejct-card">
+                        <div class="project-img">
+                            <img src="molgen.png" alt="proyecto 2">
+                        </div>
+                        <div class="project-info">
+                            <h3>Pagina web con Inteligencia Artificial</h3>
+                            <p>Mediante una Ia generativa desarrolla fármacos para la diabetes tipo 2</p>
+                            <div class="project-tech">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>PYTHON</span>
+                                <span>JavaScript</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="#" target="_blank"><i clas="fas fa-link"></i>Demo</a>
+                                <a href="#" target="_blank"><i clas="fab fa-github"></i>Código</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="footer-content">
+                <p>&copy; 2025 Rocio Casares - Todos los derechos reservados</p>
+                <div class="social-links
+                        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </footer>
     </body>
     </html>
