--- a/index.html
+++ b/index.html
@@ -1,125 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Sample Page</title>
-        <link rel="stylesheet" href="styles.css" />
-        <script src="https://kit.fontawesome.com/164b33b644.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header>
-            <nav id="navbar">
-                <div class="logo">Rocio<span>Casares</span></div>
-                <ul class="nav-links">
-                    <li><a href="#inicio">Home</a></li>
-                    <li><a href="#experiencia">About</a></li>
-                    <li><a href="#proyectos">Services</a></li>
-                <ul>
-            </nav>
-        </header>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sample Page</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/164b33b644.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <div id="particles-js"></div>
+    <div id="rubik-bg"></div>
+    <header>
+        <nav id="navbar">
+            <div class="logo">Rocio<span>Casares</span></div>
+            <ul class="nav-links">
+                <li><a href="#inicio">Home</a></li>
+                <li><a href="#experiencia">About</a></li>
+                <li><a href="#proyectos">Services</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <main> 
-            <section id="inicio" class="hero"> 
-                <div class="hero-content">
-                    <div class="hero-text">
-                        <h1>Rocio Casares</h1>
-                        <h2>Desarolladora Web</h2>
-                        <p>Apasionada por crear experencias web únicas y funcionales. Siempre buscando aprender nuevas tecnologías y mejorar habilidades</p>
-                        <div class="social-links
+    <main> 
+        <section id="inicio" class="hero"> 
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1>Rocio Casares</h1>
+                    <h2>Desarolladora Web</h2>
+                    <p>Apasionada por crear experencias web únicas y funcionales. Siempre buscando aprender nuevas tecnologías y mejorar habilidades</p>
+                    <div class="social-links">
                         <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                    <a href="#contacto" class="btn">Contáctame</a>
-                    <div class ="hero-image">
-                        <img src="profile.png" alt="Profile Image">
                     </div>
                 </div>
-            </section>
-
-            <section id="experiencia" class="experiencia">
-                <h2 class="section-title">Experiencia Laboral</h2>
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-content">
-                            <span class="date">2024-Actualidad</span>
-                            <h3>Desarolladora IA</h3>
-                            <h4>Proyecto Ort Belgrano</h4>
-                            <p>Desarollo de Ia generativa utilizanndo lenguajes de PYTHON y usando librerias como Pytorch y Tensorflow.</p>
-                            <ul class="skills">
-                                <li>PYTHON</li>
-                                <li>Pytorch</li>
-                                <li>Tensorflow</li>
-                            </ul>
-                            <h3>Desarolladora Backend</h3>
-                            <h4>Proyecto Ort Belgrano</h4>
-                            <p>Desarollo de páginas web utilizando lenguajes de JavaScript, HTML y Css.</p>
-                            <ul class="skills">
-                                <li>Rust</li>
-                                <li>Tailwynd CSS</li>
-                                <li>React</li>
-                                <li>C++</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="proyectos" class="projects">
-                <h2 class="section-title">Proyectos Personales</h2>
-                <div class="project-container">
-                    <div class="proejct-card">
-                        <div class="project-img">
-                            <img src="molgen.png" alt="proyecto 1">
-                        </div>
-                        <div class="project-info">
-                            <h3>Pagina web con Inteligencia Artificial</h3>
-                            <p>Mediante una Ia generativa desarrolla fármacos para la diabetes tipo 2</p>
-                            <div class="project-tech">
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>PYTHON</span>
-                                <span>JavaScript</span>
-                            </div>
-                            <div class="project-links">
-                                <a href="#" target="_blank"><i clas="fas fa-link"></i>Demo</a>
-                                <a href="#" target="_blank"><i clas="fab fa-github"></i>Código</a>
-                            </div>
-                        </div>
-                    </div>
-                        <div class="proejct-card">
-                        <div class="project-img">
-                            <img src="molgen.png" alt="proyecto 2">
-                        </div>
-                        <div class="project-info">
-                            <h3>Pagina web con Inteligencia Artificial</h3>
-                            <p>Mediante una Ia generativa desarrolla fármacos para la diabetes tipo 2</p>
-                            <div class="project-tech">
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>PYTHON</span>
-                                <span>JavaScript</span>
-                            </div>
-                            <div class="project-links">
-                                <a href="#" target="_blank"><i clas="fas fa-link"></i>Demo</a>
-                                <a href="#" target="_blank"><i clas="fab fa-github"></i>Código</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <div class="footer-content">
-                <p>&copy; 2025 Rocio Casares - Todos los derechos reservados</p>
-                <div class="social-links
-                        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#contacto" class="btn">Contáctame</a>
+                <div class="hero-image">
+                    <img src="profile.png" alt="Profile Image">
                 </div>
             </div>
-        </footer>
-    </body>
-    </html>
+        </section>
+
+        <section id="experiencia" class="experiencia">
+            <h2 class="section-title">Experiencia Laboral</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <span class="date">2024-Actualidad</span>
+                        <h3>Desarolladora IA</h3>
+                        <h4>Proyecto Ort Belgrano</h4>
+                        <p>Desarollo de Ia generativa utilizando lenguajes de PYTHON y usando librerías como Pytorch y Tensorflow.</p>
+                        <ul class="skills">
+                            <li>PYTHON</li>
+                            <li>Pytorch</li>
+                            <li>Tensorflow</li>
+                        </ul>
+                        <h3>Desarolladora Backend</h3>
+                        <h4>Proyecto Ort Belgrano</h4>
+                        <p>Desarollo de páginas web utilizando lenguajes de JavaScript, HTML y CSS.</p>
+                        <ul class="skills">
+                            <li>Rust</li>
+                            <li>Tailwynd CSS</li>
+                            <li>React</li>
+                            <li>C++</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="proyectos" class="projects">
+            <h2 class="section-title">Proyectos Personales</h2>
+            <div class="projects-container">
+                <div class="project-card">
+                    <div class="project-img">
+                        <img src="molgen.png" alt="proyecto 1">
+                    </div>
+                    <div class="project-info">
+                        <h3>Página web con Inteligencia Artificial</h3>
+                        <p>Mediante una IA generativa desarrolla fármacos para la diabetes tipo 2</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>PYTHON</span>
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fas fa-link"></i>Demo</a>
+                            <a href="#" target="_blank"><i class="fab fa-github"></i>Código</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-img">
+                        <img src="molgen.png" alt="proyecto 2">
+                    </div>
+                    <div class="project-info">
+                        <h3>Página web con Inteligencia Artificial</h3>
+                        <p>Mediante una IA generativa desarrolla fármacos para la diabetes tipo 2</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>PYTHON</span>
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fas fa-link"></i>Demo</a>
+                            <a href="#" target="_blank"><i class="fab fa-github"></i>Código</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 Rocio Casares - Todos los derechos reservados</p>
+            <div class="social-links">
+                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </footer>
+    <script src="https://unpkg.com/three@0.152.2/build/three.min.js"></script>
+    <script src="https://unpkg.com/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
+    <script src="particles.min.js"></script>
+    <script>
+    particlesJS('particles-js', {
+      "particles": {
+        "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
+        "color": { "value": "#ffffff" },
+        "shape": { "type": "circle" },
+        "opacity": { "value": 0.5 },
+        "size": { "value": 5, "random": true },
+        "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.4, "width": 1 },
+        "move": { "enable": true, "speed": 6, "out_mode": "out" }
+      },
+      "interactivity": {
+        "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" } },
+        "modes": { "repulse": { "distance": 200 }, "push": { "particles_nb": 4 } }
+      },
+      "retina_detect": true
+    });
+    </script>
+    <script>
+// Cubo Rubik interactivo
+const scene = new THREE.Scene();
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+const renderer = new THREE.WebGLRenderer({ alpha: true });
+renderer.setSize(window.innerWidth, window.innerHeight);
+document.getElementById('rubik-bg').appendChild(renderer.domElement);
+const rubikGroup = new THREE.Group();
+const cubeSize = 1;
+const gap = 0.07;
+const colors = [0xffffff, 0xff0000, 0x0000ff, 0x00ff00, 0xffff00, 0xff8000];
+function makeStickeredCube(x, y, z) {
+    const materials = [
+        new THREE.MeshBasicMaterial({color: colors[0]}), // right
+        new THREE.MeshBasicMaterial({color: colors[1]}), // left
+        new THREE.MeshBasicMaterial({color: colors[2]}), // top
+        new THREE.MeshBasicMaterial({color: colors[3]}), // bottom
+        new THREE.MeshBasicMaterial({color: colors[4]}), // front
+        new THREE.MeshBasicMaterial({color: colors[5]}), // back
+    ];
+    const geometry = new THREE.BoxGeometry(cubeSize, cubeSize, cubeSize);
+    const cube = new THREE.Mesh(geometry, materials);
+    cube.position.set(x, y, z);
+    return cube;
+}
+for (let x = -1; x <= 1; x++) {
+    for (let y = -1; y <= 1; y++) {
+        for (let z = -1; z <= 1; z++) {
+            const cube = makeStickeredCube(
+                x * (cubeSize + gap),
+                y * (cubeSize + gap),
+                z * (cubeSize + gap)
+            );
+            rubikGroup.add(cube);
+        }
+    }
+}
+scene.add(rubikGroup);
+camera.position.set(4, 4, 7);
+camera.lookAt(0, 0, 0);
+const controls = new THREE.OrbitControls(camera, renderer.domElement);
+controls.enableDamping = true;
+controls.dampingFactor = 0.09;
+controls.enableZoom = false;
+controls.enablePan = false;
+function animate() {
+    requestAnimationFrame(animate);
+    controls.update();
+    renderer.render(scene, camera);
+}
+animate();
+window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+});
+    </script>
+</body>
+</html>
+
