fondo de particulas agregado

--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
             </div>
         </div>
     </footer>
+    <!-- Three.js -->
     <script src="https://unpkg.com/three@0.152.2/build/three.min.js"></script>
-    <script src="https://unpkg.com/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
-    <script src="particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script>
     particlesJS('particles-js', {
         "particles": {
