--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sample Page</title>
+    <title>Rocío Casares Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://kit.fontawesome.com/164b33b644.js" crossorigin="anonymous"></script>
 </head>
@@ -30,12 +30,11 @@
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/rocío-maría-casares-8527a0371" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/RochiC" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <a href="#contacto" class="btn">Contáctame</a>
                 <div class="hero-image">
-                    <img src="profile.png" alt="Profile Image">
+                    <img src="profile.jpg" alt="Profile Image">
                 </div>
             </div>
         </section>
